fix nav z-index

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ code {
   margin-top: 1rem;
   margin-right: 4rem;
   right: 0;
+  z-index: 1;
   
 }
 
